[package]
name = "momentum-crypto"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Examples"]
description = "Cross-asset momentum strategy for cryptocurrency trading using Bybit API"
readme = "README.md"
license = "MIT"
keywords = ["momentum", "cryptocurrency", "trading", "bybit", "quantitative-finance"]

[dependencies]
# HTTP client for Bybit API
reqwest = { version = "0.12", features = ["json"] }

# Math and arrays
ndarray = { version = "0.16", features = ["serde"] }
ndarray-stats = "0.6"

# Random number generation
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV handling for data export
csv = "1.3"

# Progress bars
indicatif = "0.17"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Statistics
statrs = "0.17"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[bin]]
name = "momentum-crypto"
path = "src/main.rs"

[[example]]
name = "fetch_prices"
path = "examples/fetch_prices.rs"

[[example]]
name = "calc_momentum"
path = "examples/calc_momentum.rs"

[[example]]
name = "run_strategy"
path = "examples/run_strategy.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"
