[package]
name = "glow-trading"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Examples"]
description = "GLOW (Generative Flow) for cryptocurrency trading using Rust"
readme = "README.md"
license = "MIT"
keywords = ["glow", "normalizing-flow", "cryptocurrency", "trading", "machine-learning"]

[dependencies]
# Math and arrays
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# HTTP client for API requests
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# CSV handling
csv = "1.3"

# Progress bars
indicatif = "0.17"

# Model serialization
bincode = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Statistics
statrs = "0.17"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[bin]]
name = "glow-trading"
path = "src/main.rs"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train_model"
path = "examples/train_model.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[[example]]
name = "generate_scenarios"
path = "examples/generate_scenarios.rs"
